# NeoTux

./: .clang-format  CMakeLists.txt  config.h.in  license_template.txt
cmake/: psp.cmake
scripts/: convert2spritesheet.pl  generate_lua_capi.lua  lua_capi_data.lua
src/: camera.cpp  camera.hpp  collision.cpp  collision.hpp  collision_system.cpp  collision_system.hpp  game.cpp  game.hpp  input_manager.cpp  input_manager.hpp  level.cpp  level.hpp  level_reader.cpp  level_reader.hpp  level_screen.cpp  level_screen.hpp  main.cpp  physics.hpp  sdl_exception.hpp  sector.cpp  sector.hpp  settings.cpp  settings.hpp  spatial_hash.hpp  stats.cpp  stats.hpp  stats_overlay.cpp  stats_overlay.hpp  thread_worker.cpp  thread_worker.hpp  tile.cpp  tile.hpp  tile_chunk.cpp  tile_chunk.hpp  tile_info.cpp  tile_info.hpp  tilemap.cpp  tilemap.hpp  tiles_reader.cpp  tiles_reader.hpp  (+3 more)
src/audio/: mixer.cpp  mixer.hpp  music_data.hpp  music_reader.cpp  music_reader.hpp  sound_manager.cpp  sound_manager.hpp
src/gui/: box.cpp  box.hpp  button.cpp  button.hpp  container.cpp  container.hpp  gui_reader.cpp  gui_reader.hpp  text.cpp  text.hpp  widget.cpp  widget.hpp
src/luacxx/: luacxx.cpp  luacxx.hpp
src/math/: general.hpp  rect.hpp  size.hpp  vector.hpp
src/object/: all_objects.hpp  bonus_block.cpp  bonus_block.hpp  coin.cpp  coin.hpp  game_object.cpp  game_object.hpp  moving_object.cpp  moving_object.hpp  moving_sprite.cpp  moving_sprite.hpp  mriceblock.cpp  mriceblock.hpp  object_state.cpp  object_state.hpp  player.cpp  player.hpp  powerup.cpp  powerup.hpp  snowball.cpp  snowball.hpp  spiky.cpp  spiky.hpp
src/object/retro/: retro_brick.cpp  retro_brick.hpp  retro_player.cpp  retro_player.hpp
src/util/: filesystem.cpp  filesystem.hpp  logger.cpp  logger.hpp  sexp.cpp  sexp.hpp
src/video/: font_cache.cpp  font_cache.hpp  font_manager.cpp  font_manager.hpp  painter.cpp  painter.hpp  texture.cpp  texture.hpp  texture_manager.cpp  texture_manager.hpp  texture_store.hpp  video_system.cpp  video_system.hpp
src/video/bgfx/: bgfx_program.cpp  bgfx_program.hpp  bgfx_texture.cpp  bgfx_texture.hpp  bgfx_video_system.cpp  bgfx_video_system.hpp
src/video/sdl/: painter.cpp  painter.hpp  sdl_video_system.cpp  sdl_video_system.hpp  surface_blitter.cpp  surface_blitter.hpp  texture.cpp  texture.hpp  ttf_font.cpp  ttf_font.hpp  window.cpp  window.hpp
tests/game_tests/: all_tests.hpp  collision_test.cpp  collision_test.hpp  everything_test.cpp  everything_test.hpp  game_test.cpp  game_test.hpp  gui_test.cpp  gui_test.hpp  milestone_1_test.cpp  milestone_1_test.hpp  platforming_test.cpp  platforming_test.hpp  raw_draw_test.cpp  raw_draw_test.hpp
tests/unit/: CMakeLists.txt  bindings_test.cpp  filesystem_test.cpp  lua_state_test.cpp  sexp_test.cpp  vector_test.cpp
